chore: replaced call to isBlank()